--- a/ordersapi/pom.xml
+++ b/ordersapi/pom.xml
@@ -38,6 +38,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.17.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-dynamodb</artifactId>
+      <version>1.12.730</version>
+    </dependency>
+
   </dependencies>
 
   <build>
