--- a/template.yaml
+++ b/template.yaml
@@ -53,4 +53,10 @@ Outputs:
   CreateOrdersAPI:
     Description: "API Gateway endpoint url for create orders Function:"
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/orders"
+  CreateOrderFunction:
+    Description: "Create Order Lambda Function ARN"
+    Value: !GetAtt CreateOrderFunction.Arn
+  CreateOrderFunctionIamRole:
+    Description: "Create Order Lambda Function IAM Role ARN"
+    Value: !GetAtt CreateOrderFunctionRole.Arn
     
